fix: correct style issue with text hidden behind the map

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -1,3 +1,7 @@
+html, body {
+  height: 100%;
+}
+
 body {
   top: 0px;
   left: 0px;
